webdrivermanager (1.2.3)

  + Bug-fix: redirection of setup call to the proper method

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 01 Sep 2015 10:52:00 +0200

webdrivermanager (1.2.2)

  + Improved automatic discover of latest version to be downloaded (GitHub issue #5)
  + Improved test coverage
  + Changed log level to DEBUG

 -- Boni Garcia <boni.gg@gmail.com>  Wed, 19 Aug 2015 10:29:00 +0200


webdrivermanager (1.2.1)

  + Improved driver version management
  + Added getter to read the downloaded version

 -- Boni Garcia <boni.gg@gmail.com>  Fri, 14 Aug 2015 01:18:00 +0200


webdrivermanager (1.2.0)

  + Thread safe download. Pull request thanks to Ivan Gracia (izanmail@gmail.com)

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 7 Jul 2015 13:18:40 +0200


webdrivermanager (1.1.2)

  + Manager classes as singlentons

 -- Boni Garcia <boni.gg@gmail.com>  Mon, 6 Jul 2015 15:02:15 +0200


webdrivermanager (1.1.1)

  + Added provided scope to slf4j-simple
  + Bug-fix: store binary in path using version instead of LATEST

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 23 Jun 2015 11:42:01 +0200


webdrivermanager (1.1.0)

  + Changed log dependency from slf4j-log4j12 to slf4j-simple
  + Changed setup from static method to instantiation of DriverManager
  + Added parameter to force the use of a concrete WebDriver binary version

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 23 Jun 2015 00:44:11 +0200


webdrivermanager (1.0.1)

  + Bug-fix: Wrong chromedriver version downloaded (GitHub issue #1)

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 9 Jun 2015 00:02:31 +0200
 

webdrivermanager (1.0.0)

  + Automated download of WebDriver binaries
  + Automated export of WebDriver binaries path
  + Supported WebDriver binaries: Chrome, Opera, Internet Explorer
  + Customizable configuration parameters using Java system properties
  + Capability to force WebDriver binary architecture (32/64 bits)

 -- Boni Garcia <boni.gg@gmail.com>  Thu, 19 Mar 2015 20:06:14 +0200