@@ -15,12 +15,14 @@
 package io.github.bonigarcia.wdm;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
 
 import javax.xml.parsers.DocumentBuilder;
@@ -29,6 +31,7 @@ import javax.xml.xpath.XPath;
 import javax.xml.xpath.XPathConstants;
 import javax.xml.xpath.XPathFactory;
 
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.SystemUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -45,11 +48,12 @@ import org.xml.sax.InputSource;
  */
 public abstract class BrowserManager {
 
-	protected static final Logger log = LoggerFactory.getLogger(BrowserManager.class);
+	protected static final Logger log = LoggerFactory
+			.getLogger(BrowserManager.class);
 
 	private static final String SEPARATOR = "/";
-	private static final Architecture DEFAULT_ARCH = Architecture.valueOf("x"
-			+ System.getProperty("sun.arch.data.model"));
+	private static final Architecture DEFAULT_ARCH = Architecture
+			.valueOf("x" + System.getProperty("sun.arch.data.model"));
 	private static final String MY_OS_NAME = getOsName();
 	private static final String VERSION_PROPERTY = "wdm.driverVersion";
 
@@ -79,8 +83,9 @@ public abstract class BrowserManager {
 
 	public void setup(Architecture arch, String version) {
 		try {
-			this.getClass().newInstance()
-					.manage(arch, version.equals(DriverVersion.NOT_SPECIFIED.name()) ? getDriverVersion() : version);
+			this.getClass().newInstance().manage(arch,
+					version.equals(DriverVersion.NOT_SPECIFIED.name())
+							? getDriverVersion() : version);
 		} catch (InstantiationException | IllegalAccessException e) {
 			throw new RuntimeException(e);
 		}
@@ -90,53 +95,103 @@ public abstract class BrowserManager {
 		manage(arch, version.name());
 	}
 
+	public String existsDriverInCache(String repository, String driverName,
+			String driverVersion) {
+		log.trace("Checking if {} {} exists in cache {}", driverName,
+				driverVersion, repository);
+
+		Iterator<File> iterateFiles = FileUtils
+				.iterateFiles(new File(repository), null, true);
+
+		String driverInCache = null;
+		while (iterateFiles.hasNext()) {
+			driverInCache = iterateFiles.next().toString();
+			if (driverInCache.contains(driverName)
+					&& driverInCache.contains(driverVersion)) {
+				log.debug("Found {} {} in cache: {} ", driverName,
+						driverVersion, driverInCache);
+				break;
+			} else {
+				driverInCache = null;
+			}
+		}
+
+		if (driverInCache == null) {
+			log.trace("{} {} do not exist in cache {}", driverName,
+					driverVersion, repository);
+		}
+		return driverInCache;
+	}
+
 	public void manage(Architecture arch, String version) {
 		try {
 			boolean getLatest = version == null || version.isEmpty()
 					|| version.equalsIgnoreCase(DriverVersion.LATEST.name())
-					|| version.equalsIgnoreCase(DriverVersion.NOT_SPECIFIED.name());
+					|| version.equalsIgnoreCase(
+							DriverVersion.NOT_SPECIFIED.name());
 
-			// Get the complete list of URLs
-			List<URL> urls = getDrivers(version);
-			List<URL> candidateUrls;
-			boolean continueSearchingVersion;
-
-			do {
-				// Get the latest or concrete version
-				if (getLatest) {
-					candidateUrls = getLatest(urls, getDriverName());
-				} else {
-					candidateUrls = getVersion(urls, getDriverName(), version);
-				}
-				if (versionToDownload == null) {
-					break;
-				}
-
-				// Filter by architecture and OS
-				candidateUrls = filter(candidateUrls, arch);
-
-				// Find out if driver version has been found or not
-				continueSearchingVersion = candidateUrls.isEmpty() && getLatest;
-				if (continueSearchingVersion) {
-					log.debug("No valid binary found for {} {}", getDriverName(), versionToDownload);
-					urls = removeFromList(urls, versionToDownload);
-					versionToDownload = null;
-				}
-
-			} while (continueSearchingVersion);
-
-			if (candidateUrls.isEmpty()) {
-				String versionStr = getLatest ? "(latest version)" : version;
-				String errMessage = getDriverName() + " " + versionStr + " for " + MY_OS_NAME + arch.toString()
-						+ " not found in " + getDriverUrl();
-				log.error(errMessage);
-				throw new RuntimeException(errMessage);
+			String driverInCache = null;
+			if (!getLatest) {
+				driverInCache = existsDriverInCache(Downloader.getTargetPath(),
+						getDriverName(), version);
 			}
 
-			for (URL url : candidateUrls) {
-				String export = candidateUrls.contains(url) ? getExportParameter() : null;
-				System.setProperty(VERSION_PROPERTY, versionToDownload);
-				Downloader.download(url, versionToDownload, export);
+			if (driverInCache != null) {
+				System.setProperty(VERSION_PROPERTY, version);
+				exportDriver(getExportParameter(), driverInCache);
+
+			} else {
+
+				getDriverName();
+
+				// Get the complete list of URLs
+				List<URL> urls = getDrivers(version);
+				List<URL> candidateUrls;
+				boolean continueSearchingVersion;
+
+				do {
+					// Get the latest or concrete version
+					if (getLatest) {
+						candidateUrls = getLatest(urls, getDriverName());
+					} else {
+						candidateUrls = getVersion(urls, getDriverName(),
+								version);
+					}
+					if (versionToDownload == null) {
+						break;
+					}
+
+					// Filter by architecture and OS
+					candidateUrls = filter(candidateUrls, arch);
+
+					// Find out if driver version has been found or not
+					continueSearchingVersion = candidateUrls.isEmpty()
+							&& getLatest;
+					if (continueSearchingVersion) {
+						log.debug("No valid binary found for {} {}",
+								getDriverName(), versionToDownload);
+						urls = removeFromList(urls, versionToDownload);
+						versionToDownload = null;
+					}
+
+				} while (continueSearchingVersion);
+
+				if (candidateUrls.isEmpty()) {
+					String versionStr = getLatest ? "(latest version)"
+							: version;
+					String errMessage = getDriverName() + " " + versionStr
+							+ " for " + MY_OS_NAME + arch.toString()
+							+ " not found in " + getDriverUrl();
+					log.error(errMessage);
+					throw new RuntimeException(errMessage);
+				}
+
+				for (URL url : candidateUrls) {
+					String export = candidateUrls.contains(url)
+							? getExportParameter() : null;
+					System.setProperty(VERSION_PROPERTY, versionToDownload);
+					Downloader.download(url, versionToDownload, export);
+				}
 			}
 
 		} catch (Exception e) {
@@ -145,20 +200,23 @@ public abstract class BrowserManager {
 	}
 
 	public List<URL> filter(List<URL> list, Architecture arch) {
-		log.trace("{} {} - URLs before filtering: {}", getDriverName(), versionToDownload, list);
+		log.trace("{} {} - URLs before filtering: {}", getDriverName(),
+				versionToDownload, list);
 
 		List<URL> out = new ArrayList<URL>();
 
 		// Round #1 : Filter by OS
 		for (URL url : list) {
 			for (OperativeSystem os : OperativeSystem.values()) {
-				if (MY_OS_NAME.contains(os.name()) && url.getFile().toLowerCase().contains(os.name())) {
+				if (MY_OS_NAME.contains(os.name())
+						&& url.getFile().toLowerCase().contains(os.name())) {
 					out.add(url);
 				}
 			}
 		}
 
-		log.trace("{} {} - URLs after filtering by OS ({}): {}", getDriverName(), versionToDownload, MY_OS_NAME, out);
+		log.trace("{} {} - URLs after filtering by OS ({}): {}",
+				getDriverName(), versionToDownload, MY_OS_NAME, out);
 
 		// Round #2 : Filter by architecture (32/64 bits)
 		if (out.size() > 1) {
@@ -169,8 +227,8 @@ public abstract class BrowserManager {
 			}
 		}
 
-		log.trace("{} {} - URLs after filtering by architecture ({}): {}", getDriverName(), versionToDownload, arch,
-				out);
+		log.trace("{} {} - URLs after filtering by architecture ({}): {}",
+				getDriverName(), versionToDownload, arch, out);
 
 		return out;
 	}
@@ -189,7 +247,8 @@ public abstract class BrowserManager {
 		List<URL> out = new ArrayList<URL>();
 		Collections.reverse(list);
 		for (URL url : list) {
-			if (url.getFile().contains(match) && url.getFile().contains(version)) {
+			if (url.getFile().contains(match)
+					&& url.getFile().contains(version)) {
 				out.add(url);
 			}
 		}
@@ -204,7 +263,8 @@ public abstract class BrowserManager {
 		Collections.reverse(list);
 		for (URL url : list) {
 			if (url.getFile().contains(match)) {
-				String currentVersion = url.getFile().substring(url.getFile().indexOf(SEPARATOR) + 1,
+				String currentVersion = url.getFile().substring(
+						url.getFile().indexOf(SEPARATOR) + 1,
 						url.getFile().lastIndexOf(SEPARATOR));
 				if (versionToDownload == null) {
 					versionToDownload = currentVersion;
@@ -226,24 +286,31 @@ public abstract class BrowserManager {
 		String[] vals1 = str1.split("\\.");
 		String[] vals2 = str2.split("\\.");
 		int i = 0;
-		while (i < vals1.length && i < vals2.length && vals1[i].equals(vals2[i])) {
+		while (i < vals1.length && i < vals2.length
+				&& vals1[i].equals(vals2[i])) {
 			i++;
 		}
 		if (i < vals1.length && i < vals2.length) {
-			int diff = Integer.valueOf(vals1[i]).compareTo(Integer.valueOf(vals2[i]));
+			int diff = Integer.valueOf(vals1[i])
+					.compareTo(Integer.valueOf(vals2[i]));
 			return Integer.signum(diff);
 		} else {
 			return Integer.signum(vals1.length - vals2.length);
 		}
 	}
 
-	public List<URL> getDriversFromXml(URL driverUrl, String driverBinary) throws Exception {
-		BufferedReader reader = new BufferedReader(new InputStreamReader(driverUrl.openStream()));
+	public List<URL> getDriversFromXml(URL driverUrl, String driverBinary)
+			throws Exception {
+		log.debug("Reading {} to seek {}", driverUrl, getDriverName());
+
+		BufferedReader reader = new BufferedReader(
+				new InputStreamReader(driverUrl.openStream()));
 		Document xml = loadXML(reader);
 
 		List<URL> urls = new ArrayList<URL>();
 		XPath xPath = XPathFactory.newInstance().newXPath();
-		NodeList nodes = (NodeList) xPath.evaluate("//Contents/Key", xml.getDocumentElement(), XPathConstants.NODESET);
+		NodeList nodes = (NodeList) xPath.evaluate("//Contents/Key",
+				xml.getDocumentElement(), XPathConstants.NODESET);
 
 		for (int i = 0; i < nodes.getLength(); ++i) {
 			Element e = (Element) nodes.item(i);
@@ -277,6 +344,12 @@ public abstract class BrowserManager {
 			os = "mac";
 		}
 		return os;
+	}
+
+	protected static void exportDriver(String variableName,
+			String variableValue) {
+		log.debug("Exporting {} as {}", variableName, variableValue);
+		System.setProperty(variableName, variableValue);
 	}
 
 }
